# data-analysis-workspace

./: .gitignore  CLAUDE.md  GEMINI.md  README.md
01-oracle_analyse/: CLAUDE.md  README.md  analyze_procedures.py  analyze_views.py  config.py  generate_obsidian_files.py  map_sources_to_bq.py  pyproject.toml  summarize_oracle_usage.py  tnn-consumer-common-nx_temp_ccm_user_source_procedures_analysis.json  tnn-consumer-common-nx_temp_ccm_user_views_views_analysis.json  tnn-consumer-common-nx_temp_clm_adm_user_source_procedures_analysis.json  tnn-consumer-common-nx_temp_clm_adm_user_views_views_analysis.json  tnn-consumer-common-nx_temp_clm_ccm_user_source_procedures_analysis.json  tnn-consumer-common-nx_temp_clm_ccm_user_views_views_analysis.json  view_and_proc_oracle_agent_analysis.ipynb  (+3 more)
02-device_prediction/: CLAUDE.md  pyproject.toml
02-device_prediction/POC/: Device_change_train_test_validation_and_prediction.ipynb  Mobile_phone_industry_expert_17_Oct_2025,_08_40_55 (1).ipynb  device_change_abt.sql  device_change_prediction.sql
02-device_prediction/config/: default.yaml
02-device_prediction/src/device_prediction/: __init__.py  bq_client.py  cli.py  config.py  device_agent.py  device_history.py  encoding.py  extract.py  features.py  model.py  pipeline.py  statistics.py  target.py
02-device_prediction/src/device_prediction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
02-device_prediction/tests/: conftest.py  test_device_agent.py  test_device_history.py  test_features.py  test_statistics.py  test_target.py
docs/ai/: MEMORY.md  (+1 more)
(+2366 files in other folders)
